Bug 1399727 - Fix double-reporting of memory in ScriptPreloader. r=kmag.

DMD indicates double-reporting for mURL, indicating that it is shared.